// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders menu with a number 1`] = `
<Menu
  onSelect={[Function]}
>
  <MenuTrigger>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 20,
          }
        }
      >
        All conversations
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "marginTop": 3,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 25,
              },
              Object {
                "marginTop": 3,
              },
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </Text>
    </View>
  </MenuTrigger>
  <MenuOptions>
    <MenuOption
      value={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        See all conversations
      </Text>
    </MenuOption>
    <MenuOption
      value="+1231231234"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        (123) 123-1234
      </Text>
    </MenuOption>
  </MenuOptions>
</Menu>
`;

exports[`renders with an empty menu 1`] = `
<Menu
  onSelect={[Function]}
>
  <MenuTrigger>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 20,
          }
        }
      >
        All conversations
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "marginTop": 3,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 25,
              },
              Object {
                "marginTop": 3,
              },
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </Text>
    </View>
  </MenuTrigger>
  <MenuOptions>
    <MenuOption
      disabled={true}
      text="You have no number"
    />
  </MenuOptions>
</Menu>
`;
